--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -6,8 +6,8 @@ spec:
   source:
     type: "Git"
     git:
-      uri: "https://github.com/mglantz/nodejs-ex.git"
+      uri: "https://github.com/mglantz/ocp-jenkins.git"
   strategy:
     type: "JenkinsPipeline"
     jenkinsPipelineStrategy:
-jenkinsfilePath:
+      jenkinsfilePath:
